# frankenscipy

./: .gitignore  .rch.env  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_SCIPY_STRUCTURE.md  FEATURE_PARITY.md  GEMINI_FINAL_REPORT.md  GEMINI_REVIEW_SUMMARY.md  GEMINI_REVIEW_SUMMARY_2.md  GEMINI_REVIEW_SUMMARY_3.md  PARITY-COVERAGE.md  README.md  UPGRADE_LOG.md  audit_scipy_reality.md  cf_test.py  cf_test2.py  cf_test3.py  check_padlen.py  claude-upgrade-progress.json  latent_audit_summary.md  quality_gates.toml  reproduce_sos.rs  test_bspline_anti.py  test_bspline_anti.rs  test_dct.py  test_pchip.py  test_simplex.rs  test_zscore.rs
crates/fsci-arrayapi/: Cargo.toml  implementation_sequence.md
crates/fsci-arrayapi/benches/: arrayapi_bench.rs
crates/fsci-arrayapi/proptest-regressions/: backend.txt
crates/fsci-arrayapi/src/: audit.rs  backend.rs  broadcast.rs  creation.rs  dtype.rs  error.rs  indexing.rs  integration.rs  lib.rs  types.rs
crates/fsci-cluster/: Cargo.toml
crates/fsci-cluster/benches/: cluster_bench.rs
crates/fsci-cluster/src/: lib.rs
crates/fsci-cluster/tests/: metamorphic_tests.rs
crates/fsci-conformance/: COVERAGE.md  Cargo.toml  DISCREPANCIES.md  build.rs
crates/fsci-conformance/fixtures/: FSCI-P2C-002_linalg_core.json  FSCI-P2C-003_optimize_core.json  FSCI-P2C-004_sparse_ops.json  FSCI-P2C-005_fft_core.json  FSCI-P2C-006_special_core.json  FSCI-P2C-007_arrayapi_core.json  FSCI-P2C-007_boltzmann_golden.json  FSCI-P2C-007_burr3_golden.json  FSCI-P2C-007_kappa3_golden.json  FSCI-P2C-007_kstwobign_golden.json  FSCI-P2C-007_planck_golden.json  FSCI-P2C-007_powerlognorm_golden.json  FSCI-P2C-007_weibull_max_golden.json  FSCI-P2C-007_yulesimon_golden.json  FSCI-P2C-007_zipfian_golden.json  FSCI-P2C-008_runtime_casp.json  FSCI-P2C-009_cluster_core.json  FSCI-P2C-010_spatial_core.json  FSCI-P2C-011_signal_core.json  FSCI-P2C-012_stats_core.json  FSCI-P2C-013_integrate_core.json  FSCI-P2C-014_interpolate_core.json  FSCI-P2C-015_ndimage_core.json  FSCI-P2C-016_constants_core.json  FSCI-P2C-017_io_core.json  PROVENANCE.md  README.md
crates/fsci-conformance/python_oracle/: scipy_arrayapi_oracle.py  scipy_cluster_oracle.py  scipy_constants_oracle.py  scipy_fft_oracle.py  scipy_integrate_oracle.py  scipy_interpolate_oracle.py  scipy_io_oracle.py  scipy_linalg_oracle.py  scipy_ndimage_oracle.py  scipy_optimize_oracle.py  scipy_signal_oracle.py  scipy_sparse_oracle.py  scipy_spatial_oracle.py  scipy_special_oracle.py  scipy_stats_oracle.py
crates/fsci-conformance/src/: ci_gates.rs  dashboard.rs  e2e.rs  forensics.rs  lib.rs  metamorphic.rs  quality_gates.rs
crates/fsci-conformance/tests/: diff_arrayapi_audit_record_fail_closed.rs  diff_arrayapi_broadcast_audit_equivalence.rs  diff_arrayapi_creation_audit_record.rs  diff_arrayapi_creation_helpers_numpy_parity.rs  diff_arrayapi_default_float_dtype.rs  diff_cluster.rs  diff_cluster_ars_nmi.rs  diff_cluster_davies_bouldin_calinski_harabasz.rs  diff_cluster_dbscan_properties.rs  diff_cluster_fclusterdata.rs  diff_cluster_fowlkes_mallows.rs  diff_cluster_homog_complete_v.rs  diff_cluster_kmeans_properties.rs  diff_cluster_linkage_from_distances.rs  diff_cluster_linkage_helpers.rs  diff_cluster_proximity_cliques.rs  diff_cluster_silhouette.rs  diff_cluster_vq_whiten.rs  diff_constants_conversions.rs  diff_constants_physical.rs  diff_constants_temp_ev_wavelength_deg.rs  diff_constants_unit_conversions.rs  diff_constants_value_lookup.rs  diff_fft.rs  diff_fft_audit_variants_equivalence.rs  diff_fft_audit_variants_nd_equivalence.rs  diff_fft_cross_spectral_density.rs  diff_fft_dct_dst.rs  diff_fft_dctn_dstn.rs  diff_fft_fast_len.rs  diff_fft_fft2_ifft2_numpy_parity.rs  diff_fft_fftconvolve_fftcorrelate.rs  diff_fft_helpers_windows_pad.rs  diff_fft_hfft_ihfft.rs  diff_fft_hfft_nd.rs  diff_fft_hilbert_analytic.rs  diff_fft_idct.rs  diff_fft_ifftn.rs  diff_fft_irfft2.rs  diff_fft_periodogram_magnitude_phase.rs  (+738 more)
crates/fsci-integrate/: Cargo.toml
crates/fsci-integrate/benches/: integrate_bench.rs
crates/fsci-integrate/src/: api.rs  bdf.rs  bvp.rs  complex.rs  lebedev.rs  lib.rs  quad.rs  radau.rs  rk.rs  solver.rs  step_size.rs  validation.rs
crates/fsci-integrate/tests/: differential_integrate.rs  metamorphic_tests.rs  property_tests.rs
crates/fsci-interpolate/: Cargo.toml
crates/fsci-interpolate/src/: lib.rs  (+4 more)
crates/fsci-io/: Cargo.toml
crates/fsci-linalg/: COVERAGE.md  Cargo.toml  DISCREPANCIES.md  LAPACK_MAPPING.md
crates/fsci-ndimage/: Cargo.toml
crates/fsci-opt/: Cargo.toml
crates/fsci-runtime/: Cargo.toml
crates/fsci-signal/: Cargo.toml
crates/fsci-sparse/: Cargo.toml  implementation_sequence.md
crates/fsci-spatial/: Cargo.toml
crates/fsci-stats/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: p2c001_step_bounds.rs  p2c001_validate_tol.rs  p2c002_eigvals_edges.rs  p2c002_factorizations.rs  p2c002_solve.rs  p2c003_add.rs  p2c003_add_properties.rs  p2c004_sparse_direct_solve.rs  p2c004_sparse_helpers.rs  p2c005_dct_dst_roundtrip.rs  p2c005_fft_roundtrip.rs  p2c005_sparse_formats.rs  p2c006_special_airy_complex.rs  p2c006_special_bessel_base_complex.rs  p2c006_special_bessel_derivatives.rs  p2c006_special_carlson_rd.rs  p2c006_special_carlson_rf.rs  p2c006_special_carlson_rg.rs  p2c006_special_carlson_rj.rs  p2c006_special_complex_branches.rs  p2c006_special_elliptic_complex.rs  p2c006_special_erf_identities.rs  p2c006_special_hankel_complex.rs  p2c006_special_hyper_broadcast.rs  p2c006_special_hyper_complex.rs  p2c006_special_incomplete_gamma_beta.rs  p2c006_special_oracle_roundtrip.rs  p2c006_special_orthopoly.rs  p2c006_special_owens_t.rs  p2c006_special_real_edges.rs  p2c006_special_scaled_bessel_airy.rs  p2c007_stats_boltzmann_robustness.rs  p2c007_stats_burr3_robustness.rs  p2c007_stats_common.rs  p2c007_stats_correlation.rs  p2c007_stats_descriptive.rs  p2c007_stats_exponpow_robustness.rs  p2c007_stats_fit_survives_nan_inf.rs  p2c007_stats_hypothesis_tests.rs  p2c007_stats_irwinhall_robustness.rs  (+56 more)
fuzz/seeds/: README.md
(+2683 files in other folders)
