[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "crates/fsci-cluster",
  "crates/fsci-constants",
  "crates/fsci-integrate",
  "crates/fsci-interpolate",
  "crates/fsci-io",
  "crates/fsci-linalg",
  "crates/fsci-ndimage",
  "crates/fsci-opt",
  "crates/fsci-sparse",
  "crates/fsci-fft",
  "crates/fsci-signal",
  "crates/fsci-spatial",
  "crates/fsci-special",
  "crates/fsci-stats",
  "crates/fsci-arrayapi",
  "crates/fsci-conformance",
  "crates/fsci-runtime",
  "crates/fsci-datasets",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
fsci-arrayapi = { path = "crates/fsci-arrayapi" }
fsci-cluster = { path = "crates/fsci-cluster" }
fsci-conformance = { path = "crates/fsci-conformance" }
fsci-constants = { path = "crates/fsci-constants" }
fsci-datasets = { path = "crates/fsci-datasets" }
fsci-fft = { path = "crates/fsci-fft" }
fsci-integrate = { path = "crates/fsci-integrate" }
fsci-interpolate = { path = "crates/fsci-interpolate" }
fsci-io = { path = "crates/fsci-io" }
fsci-linalg = { path = "crates/fsci-linalg" }
fsci-ndimage = { path = "crates/fsci-ndimage" }
fsci-opt = { path = "crates/fsci-opt" }
fsci-runtime = { path = "crates/fsci-runtime" }
fsci-sparse = { path = "crates/fsci-sparse" }
fsci-signal = { path = "crates/fsci-signal" }
fsci-spatial = { path = "crates/fsci-spatial" }
fsci-special = { path = "crates/fsci-special" }
fsci-stats = { path = "crates/fsci-stats" }
asupersync = { version = "0.3.1", default-features = false, features = ["test-internals"] }
ftui = { version = "0.3.1", default-features = false }
blake3 = "1.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1"
toml = "1.1.2"
