[package]
name = "frankenscipy-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
fsci-conformance = { path = "../crates/fsci-conformance", default-features = false }
fsci-integrate = { path = "../crates/fsci-integrate" }
fsci-linalg = { path = "../crates/fsci-linalg" }
fsci-opt = { path = "../crates/fsci-opt" }
fsci-runtime = { path = "../crates/fsci-runtime" }
fsci-special = { path = "../crates/fsci-special" }
fsci-sparse = { path = "../crates/fsci-sparse" }
fsci-stats = { path = "../crates/fsci-stats" }
libfuzzer-sys = "0.4.12"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[[bin]]
name = "p2c001_validate_tol"
path = "fuzz_targets/p2c001_validate_tol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c001_step_bounds"
path = "fuzz_targets/p2c001_step_bounds.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c002_solve"
path = "fuzz_targets/p2c002_solve.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c002_factorizations"
path = "fuzz_targets/p2c002_factorizations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c003_add"
path = "fuzz_targets/p2c003_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c003_add_properties"
path = "fuzz_targets/p2c003_add_properties.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c004_sparse_helpers"
path = "fuzz_targets/p2c004_sparse_helpers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c005_sparse_formats"
path = "fuzz_targets/p2c005_sparse_formats.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_complex_branches"
path = "fuzz_targets/p2c006_special_complex_branches.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_incomplete_gamma_beta"
path = "fuzz_targets/p2c006_special_incomplete_gamma_beta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_bessel_derivatives"
path = "fuzz_targets/p2c006_special_bessel_derivatives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_bessel_base_complex"
path = "fuzz_targets/p2c006_special_bessel_base_complex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_oracle_roundtrip"
path = "fuzz_targets/p2c006_special_oracle_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_elliptic_complex"
path = "fuzz_targets/p2c006_special_elliptic_complex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_hankel_complex"
path = "fuzz_targets/p2c006_special_hankel_complex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_airy_complex"
path = "fuzz_targets/p2c006_special_airy_complex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_scaled_bessel_airy"
path = "fuzz_targets/p2c006_special_scaled_bessel_airy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_hyper_complex"
path = "fuzz_targets/p2c006_special_hyper_complex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c006_special_hyper_broadcast"
path = "fuzz_targets/p2c006_special_hyper_broadcast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c007_stats_fit_survives_nan_inf"
path = "fuzz_targets/p2c007_stats_fit_survives_nan_inf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c007_stats_pdf_cdf_ppf_identity"
path = "fuzz_targets/p2c007_stats_pdf_cdf_ppf_identity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c007_stats_rvs_determinism"
path = "fuzz_targets/p2c007_stats_rvs_determinism.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2c008_integrate_quad_additivity"
path = "fuzz_targets/p2c008_integrate_quad_additivity.rs"
test = false
doc = false
bench = false
