[package]
name = "fsci-arrayapi"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33.2"

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "arrayapi_bench"
harness = false
