[package]
name = "fsci-arrayapi"
version = "0.1.0"
edition = "2024"

[dependencies]
fsci-runtime = { workspace = true }
nalgebra = "0.34.2"

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "arrayapi_bench"
harness = false
