[package]
name = "fsci-cluster"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-runtime = { workspace = true }
fsci-linalg = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cluster_bench"
harness = false

[lints]
workspace = true
