[package]
name = "fsci-conformance"
version = "0.1.0"
edition = "2024"

[features]
default = ["dashboard"]
dashboard = ["dep:ftui"]

[[bin]]
name = "conformance_dashboard"
required-features = ["dashboard"]

[[bin]]
name = "e2e_orchestrator"

[[bin]]
name = "fixture_regen"

[[bin]]
name = "benchmark_gate"

[[bin]]
name = "raptorq_sidecar"

[lints]
workspace = true

[dependencies]
asupersync = { workspace = true }
blake3 = { workspace = true }
fsci-arrayapi = { workspace = true }
fsci-cluster = { workspace = true }
fsci-constants = { workspace = true }
fsci-spatial = { workspace = true }
fsci-fft = { workspace = true }
fsci-integrate = { workspace = true }
fsci-interpolate = { workspace = true }
fsci-io = { workspace = true }
fsci-linalg = { workspace = true }
fsci-ndimage = { workspace = true }
fsci-opt = { workspace = true }
fsci-runtime = { workspace = true }
fsci-signal = { workspace = true }
fsci-sparse = { workspace = true }
fsci-special = { workspace = true }
fsci-stats = { workspace = true }
ftui = { workspace = true, features = ["runtime", "crossterm"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
