[package]
name = "fsci-integrate"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
fsci-runtime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "integrate_bench"
harness = false
