[package]
name = "fsci-io"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-runtime = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "io_bench"
harness = false

[lints]
workspace = true
