[package]
name = "fsci-linalg"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
fsci-fft = { workspace = true }
fsci-runtime = { workspace = true }
nalgebra = "0.33.2"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "linalg_bench"
harness = false
