[package]
name = "fsci-ndimage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-fft = { workspace = true }
fsci-interpolate = { workspace = true }
fsci-runtime = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "ndimage_bench"
harness = false

[lints]
workspace = true
