[package]
name = "fsci-opt"
version = "0.1.0"
edition = "2024"

[dependencies]
fsci-runtime.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = { workspace = true }
proptest.workspace = true

[[bench]]
name = "optimize_bench"
harness = false
