[package]
name = "fsci-runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "runtime_bench"
harness = false
