[package]
name = "fsci-signal"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-fft = { workspace = true }
fsci-linalg = { workspace = true }
fsci-runtime = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
