[package]
name = "fsci-signal"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-fft = { workspace = true }
fsci-linalg = { workspace = true }
fsci-runtime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "signal_bench"
harness = false

[lints]
workspace = true
