[package]
name = "fsci-sparse"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
fsci-linalg = { workspace = true }
fsci-runtime = { workspace = true }
nalgebra = { version = "0.33.2", features = ["sparse"] }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "sparse_bench"
harness = false
